# dark-maximus

./: $PROFILE  -  .cursorrules  .dockerignore  .env.example  .eslintrc.json  .gitignore  .htmlhintrc  .pylintrc  .stylelintignore  .stylelintrc.json  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  Dockerfile.codex-docs  Dockerfile.docs  Dockerfile.tests  FAQ.md  FEATURES.md  INSTALL-README.md  INSTALL.md  Makefile  NX-TEST-REPORT.md  PROMPTS.md  QUICK_COMMANDS.md  README-UTF8-FIX.md  README.md  ROADMAP.md  ROADMAP_README.md  SECURITY.md  SECURITY_IMPROVEMENTS.md  STARS_INTEGRATION.md  TECH_STACK.md  agent.md  allure-categories.json  check_backup_settings.py  commit-msg-clean.txt  cookies.txt  djlint.toml  (+22 more)
.cursor/plans/: -06b49115.plan.md  -133b4a5b.plan.md  -19ce5b80.plan.md  -1fa07b54.plan.md  -226ceaca.plan.md  -235146f9.plan.md  -289ab161.plan.md  -2b788e9e.plan.md  -3747461e.plan.md  -429061f6.plan.md  -47ceafa9.plan.md  -486d91fd.plan.md  -4884fa66.plan.md  -49885fa5.plan.md  -4f81a6c3.plan.md  -51b8e3a5.plan.md  -5a018811.plan.md  -5d38c18d.plan.md  -6295ab52.plan.md  -659709ad.plan.md  -6c01d15c.plan.md  -722a0f98.plan.md  -78505a7b.plan.md  -78774f2c.plan.md  -7ba49632.plan.md  -7e5448cb.plan.md  -817e0ff6.plan.md  -82202b79.plan.md  -839e465f.plan.md  -8498c8cd.plan.md  -89b5a609.plan.md  -8e274721.plan.md  -9259fab1.plan.md  -93d1754a.plan.md  -976d945b.plan.md  -9bf025f6.plan.md  -9d197e85.plan.md  -a1b53a3d.plan.md  -a1d558fc.plan.md  -a60b9463.plan.md  (+159 more)
.cursor/rules/: .cursorrules  changelog-rules.mdc  docker-commands.mdc  docker-multi-stage-build.mdc  docs-rules.mdc  nx-usage.mdc  rights-rules.mdc  stack-docs-sourse.mdc  terminal-command.mdc  testing-rules.mdc  tooltip-guide-ui.mdc  ui-design-style.mdc
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: accessibility.md  allure-defect.md  bug_report.md  config.yml  documentation.md  duplicate.md  feature_request.md  good_first_issue.md  help_wanted.md  invalid.md  needs_architecture_review.md  needs_compatibility_review.md  needs_design.md  needs_dev_review.md  needs_documentation.md  needs_integration_review.md  needs_investigation.md  needs_more_info.md  needs_optimization.md  needs_performance_review.md  needs_qa_review.md  needs_refactoring.md  needs_reproduction.md  needs_review.md  needs_security_review.md  needs_testing.md  needs_triage.md  (+6 more)
codex.docs/: .gitignore  docker-compose.yml  docs-config.yaml  package.json  webpack.config.js
config/: docs-config.yaml  env.example
docs/: .nav.yml  .pages  ADMIN-DOCS-SUMMARY.md  ADVANCED-SETUP.md  DEPLOYMENT-CHECKLIST.md  DOCKER-DEPLOYMENT-SUMMARY.md  DOCUMENTATION-STRUCTURE.md  DOCUMENTATION-SUMMARY.md  FAQ.md  INSTALLATION-IMPROVEMENTS.md  INSTALLATION-SCRIPTS-GUIDE.md  MIGRATION-PLAN.md  POWERSHELL-UTF8-QUICKSTART.md  README.md  ROADMAP.md  SSL-SETUP.md  USER-GUIDES.md  WEB-GRID-REFACTOR.md  admin-panel-guide.md  admin-quickstart.md  architecture-rules.md  database.md  dialog-api.md  docker-architecture.md  documentation-inventory.md  features-subscriptions.md  features.md  health.md  installation.md  modules.md  monitoring-tabs-structure.md  nginx-docs.conf  notifications-setup.md  production-checklist.md  project-info.md  proof_yookassa_fix.md  referral-program.md  security-improvements.md  server-deployment.md  ssl-quick-guide.md  (+5 more)
instructions/: android.md  ios.md  linux.md  macos.md  telegram-forum-setup.md  windows.md
nginx/: nginx-ssl.conf  nginx.conf
scripts/: check.ps1  install.sh  lint.ps1  lint.sh  setup-admin-docs.bat  setup-admin-docs.sh  setup-ssl.sh  test-server.ps1  validate-scripts.sh
sessions/: .gitkeep
sessions-allure/: .gitkeep
sessions-docs/: .gitkeep
tests/: KAR-30_STAGE_2_REPORT.md  README_PAYMENT_233_CHECK.md  TESTSKIDKI50_ANALYSIS.md  TIMEZONE_FIX_SUMMARY.md  TIMEZONE_FIX_TESTING.md  _io_encoding.py  add_description_to_migration_history.py  add_timezone_column.py  apply_migration.py  backup_before_timezone_migration.py  check_and_add_timezone.py  check_key_116.py  check_key_117.py  check_payment_233_remote.sh  check_payment_233_status.py  check_promo_status.py  check_promo_tables.py  check_promo_usage.py  check_settings_tables.py  check_timezone_feature.py  check_timezone_migration.py  check_timezone_setting.py  check_token.py  check_user_timezone.py  check_webhook_logs.sh  cleanup_temp_table.py  compare_db_structure.py  compare_json_structures.py  conftest.py  create_demo_transaction.py  create_missing_tokens.py  create_missing_tokens_sql.py  create_real_yookassa_payment.py  create_real_yookassa_tx.py  enable_timezone_feature.py  final_comparison.py  final_db_comparison.py  final_deeplink_test.py  final_timezone_verification.py  final_verification.py  (+79 more)
tools/: check_templates.py
video_instructions/: README.md  ИНСТРУКЦИЯ_ПРИМЕНЕНИЯ.md
(+470 files in other folders)
